# substrate

./: .gitignore  Cargo.toml  LICENSE.md  README.md  TODO.md  build.sh  run.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
assets/: ascii_project_name.txt  instructions.md
config/: default.toml
scripts/: build.sh  publish.sh
src/: error.rs  macros.rs  main.rs
src/beliefs/: belief.rs  candidate.rs  commitment.rs  draft.rs  embedding.rs  mod.rs  proposal.rs  store.rs
src/cli/: mod.rs
src/core/: mod.rs  query_types.rs
src/core/beliefs/: belief.rs  store.rs
src/core/semantic/: index.rs
src/core/semantic/embedding/: db.rs  mod.rs  resolver.rs
src/http/: api.rs  server.rs
src/ipc/: client.rs  mod.rs  protocol.rs  server.rs  service.rs
src/mcp/: mod.rs  server.rs  service.rs  types.rs
src/semantic/: index.rs  mod.rs  reranker.rs  resolver.rs
src/semantic/embedding/: db.rs  resolver.rs
src/state/: mod.rs
src/storage/: embedding.rs  kv.rs  mod.rs
src/tui/: mod.rs
src/util/: config.rs  logging.rs  mod.rs
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  main.jsx
web/src/assets/: draculaTheme.js
web/src/containers/: AppLayout.jsx  SnackbarProvider.jsx
web/src/pages/BeliefList/: index.jsx  styles.module.css
web/src/pages/BeliefPage/: BeliefCard.jsx  BeliefDetailDialog.jsx  BeliefList.jsx  index.jsx  styles.module.css
web/src/redux/: beliefSlice.js  notificationSlice.js  store.js
web/src/services/: api.js  belief.service.js
web/src/util/: util.js
