[package]
name = "tesseract"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow-array = "57.3.0"
arrow-buffer = "57.3.0"
arrow-schema = "57.3.0"
axum = "0.8.8"
chrono = "0.4.44"
dirs = "6.0.0"
fastembed = "5"
futures = "0.3.32"
futures-util = "0.3.32"
lancedb = "0.27.2"
ndarray = "0.17.2"
ort = { version = "2.0.0-rc.11", default-features = false, features = ["ndarray", "load-dynamic"] }
redb = "4.0.0"
rmcp = { version = "1.3.0", features = ["transport-streamable-http-server", "transport-streamable-http-server-session", "transport-worker"] }
schemars = "1.2.1"
serde = "1.0.228"
serde_json = "1.0.149"
tokenizers = "0.22.2"
tokio = "1.51.0"
tokio-util = "0.7.18"
toml = "1.1.2"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
