[package]
name = "substrate"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow-array = "57.3.0"
arrow-buffer = "57.3.0"
arrow-schema = "57.3.0"
axum = "0.8.8"
chrono = "0.4.44"
crossterm = "0.29.0"
dirs = "6.0.0"
fastembed = "5"
futures = "0.3.32"
futures-util = "0.3.32"
lancedb = "0.27.2"
libc = "0.2.185"
ndarray = "0.17.2"
ort = { version = "2.0.0-rc.11", default-features = false, features = ["ndarray", "load-dynamic"] }
ratatui = "0.30.0"
rmcp = { version = "1.3.0", features = ["transport-streamable-http-server", "transport-streamable-http-server-session", "transport-worker"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
schemars = "1.2.1"
serde = "1.0.228"
serde_json = "1.0.149"
tokenizers = "0.22.2"
tokio = { version = "1.51.0", features = ["io-util"] }
tokio-util = "0.7.18"
toml = "1.1.2"
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
webbrowser = "1.2.1"
